# radar_wifi_csi

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
.gemini/: analyze_sessions.py
main/: CMakeLists.txt  dashboard.h  http_server.c  http_server.h  main.c  wifi_csi.c  wifi_csi.h
tools/: capture_ws.mjs
